@@ -24,6 +24,8 @@
             nRF5x: clear FPU interrupt before sleeping
             micro:bit: Add support for LSM303 accelerometer/magnetometer
             micro:bit: Add delays at first boot to wait for USB UART to init and connect vis USB
+            micro:bit: Re-added tab complete (enough space now)
+            micro:bit: Added a fake pin for LED/LED1 that uses the LED matrix
 
      2v06 : Allow `"ram"` keyword at the top of a function to allow it to be pretokenised and loaded to RAM
             Don't store line numbers for pretokenised functions
